--- a/README
+++ b/README
@@ -1,5 +1,11 @@
 XB-PointStream
 
+
+GitHub:     http://github.com/asalga/XB-PointStream
+Site:       http://zenit.senecac.on.ca/wiki/index.php/XB-PointStream
+Lighthouse: http://cdot.lighthouseapp.com/projects/52886-xb-pointstream/
+
+Contributors:
 David Humphrey
 Cathy Leung
 Mickael Medel
