--- a/README
+++ b/README
@@ -1,13 +1,9 @@
-XB-PointStream
+XB PointStream
 
+XB PointStream is a cross-browser JavaScript tool which emulates Arius3D's PointStream viewer.
+It can render a large amount of point cloud data to the <canvas> tag using WebGL.
 
 GitHub:     http://github.com/asalga/XB-PointStream
-Site:       http://zenit.senecac.on.ca/wiki/index.php/XB-PointStream
+Site:       http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream
 Lighthouse: http://cdot.lighthouseapp.com/projects/52886-xb-pointstream/
-
-Contributors:
-David Humphrey
-Cathy Leung
-Mickael Medel
-Andor Salga
-
+Twitter:    XBPointStream
