--- a/README
+++ b/README
@@ -6,4 +6,5 @@ It can render a large amount of point cloud data to the <canvas> tag using WebGL
 Website:    http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream
 GitHub:     http://github.com/asalga/XB-PointStream
 Lighthouse: http://cdot.lighthouseapp.com/projects/52886-xb-pointstream/
-Twitter:    XBPointStream
+Twitter:    http://twitter.com/XBPointStream
+
