--- a/README
+++ b/README
@@ -3,8 +3,13 @@ XB PointStream
 XB PointStream is a cross-browser JavaScript tool which emulates Arius3D's PointStream viewer.
 It can render a large amount of point cloud data to the <canvas> tag using WebGL.
 
-Website:    http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream
-GitHub:     http://github.com/asalga/XB-PointStream
-Lighthouse: http://cdot.lighthouseapp.com/projects/52886-xb-pointstream/
-Twitter:    http://twitter.com/XBPointStream
+Arius3D:     http://www.arius3d.com/
 
+XB PointStream
+Website:     http://zenit.senecac.on.ca/wiki/index.php/XB_PointStream
+Demos:       http://scotland.proximity.on.ca/asalga/
+GitHub:      http://github.com/asalga/XB-PointStream
+Lighthouse:  http://cdot.lighthouseapp.com/projects/52886-xb-pointstream/
+Twitter:     http://twitter.com/XBPointStream
+Blogs:       http://asalga.wordpress.com/
+             http://asydik.wordpress.com/
