added irc channel

--- a/README
+++ b/README
@@ -11,5 +11,6 @@ Demos:       http://scotland.proximity.on.ca/asalga/
 GitHub:      http://github.com/asalga/XB-PointStream
 Lighthouse:  http://cdot.lighthouseapp.com/projects/52886-xb-pointstream/
 Twitter:     http://twitter.com/XBPointStream
+IRC:         irc://irc.mozilla.org/XB-PointStream
 Blogs:       http://asalga.wordpress.com/
              http://asydik.wordpress.com/
